consumer-kit/dataapp-api/ingress_consumer_ikerlan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-dataapp
  namespace: fl-api-consumer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - control-plane-connector4.dataspace-ikerlan.es
      secretName: control-plane-connector4
  rules:
    - host: control-plane-connector4.dataspace-ikerlan.es
      http:
        paths:
          - path: /dataapp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: model-apic-service
                port:
                  number: 380
